# toast

./: .gitignore  .ignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE  LICENSE.md  MAINTAINERS.md  README.md  bake.yml  install.ps1  install.sh  integration-tests.sh  release.sh  rustfmt.toml  tagref.yml  toast.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/toast/: README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: ci.yml
integration-tests/alpine/: bake.yml
integration-tests/base-images/alpine/: toast.yml
integration-tests/base-images/busybox/: greet.sh  toast.yml
integration-tests/base-images/centos/: toast.yml
integration-tests/base-images/debian/: run.sh  toast.yml
integration-tests/base-images/fedora/: greet.sh  run.sh  toast.yml
integration-tests/base-images/ubuntu/: greet.sh  toast.yml
integration-tests/busybox/: bake.yml  greet.sh
integration-tests/centos/: bake.yml
integration-tests/debian/: bake.yml  run.sh
integration-tests/input-paths/dir/: run.sh  toast.yml
integration-tests/input-paths/dir-relative/: run.sh  toast.yml
integration-tests/input-paths/dot/: run.sh  toast.yml
integration-tests/input-paths/empty/: run.sh  toast.yml
integration-tests/input-paths/excluded-dir/: run.sh  toast.yml
integration-tests/input-paths/excluded-file/: run.sh  toast.yml
integration-tests/input-paths/file/: run.sh  toast.yml
integration-tests/input-paths/fs-root/: toast.yml
integration-tests/input-paths/nested-dir/: run.sh  toast.yml
integration-tests/input-paths/nested-excluded-dir/: run.sh  toast.yml
integration-tests/input-paths/nested-excluded-file/: run.sh  toast.yml
integration-tests/input-paths/nested-file/: run.sh  toast.yml
integration-tests/input-paths/nested-symlink/: run.sh  toast.yml
integration-tests/input-paths/symlink/: run.sh  toast.yml
integration-tests/output-paths/dir/: run.sh  toast.yml
integration-tests/output-paths/dot/: run.sh  toast.yml
integration-tests/output-paths/file/: run.sh  toast.yml
integration-tests/output-paths/nested-dir/: run.sh  toast.yml
integration-tests/output-paths/nested-file/: run.sh  toast.yml
integration-tests/output-paths/nested-symlink/: run.sh  toast.yml
integration-tests/output-paths/symlink/: run.sh  toast.yml
integration-tests/ubuntu/: bake.yml  run.sh
src/: bakefile.rs  cache.rs  config.rs  count.rs  docker.rs  entrypoint.rs  failure.rs  filesystem.rs  format.rs  job.rs  main.rs  runner.rs  schedule.rs  spinner.rs  tar.rs  toastfile.rs
