[package]
name = "toast"
version = "0.45.2"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2021"
description = "Containerize your development and continuous integration environments."
license = "MIT"
documentation = "https://github.com/stepchowfun/toast"
homepage = "https://github.com/stepchowfun/toast"
repository = "https://github.com/stepchowfun/toast"
readme = "README.md"

[dependencies]
atty = "0.2"
colored = "2"
crossbeam = "0.8"
dirs = "3"
env_logger = "0.8"
hex = "0.4"
indicatif = "0.16"
lazy_static = "1.4"
log = "0.4"
scopeguard = "1"
serde_yaml = "0.8"
sha2 = "0.9"
tar = "0.4"
tempfile = "3"
walkdir = "2"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.ctrlc]
version = "3"
features = ["termination"] # [tag:ctrlc_term]

[dependencies.serde]
version = "1"
features = ["derive"]
