[package]
name = "toast"
version = "0.47.7"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "Containerize your development and continuous integration environments."
license = "MIT"
documentation = "https://github.com/stepchowfun/toast"
homepage = "https://github.com/stepchowfun/toast"
repository = "https://github.com/stepchowfun/toast"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "3"
crossbeam = "0.8"
digest-io = "0.1"
dirs = "6"
env_logger = "0.11"
hex = "0.4"
indicatif = "0.18"
log = "0.4"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
typed-path = "0.12"
walkdir = "2"

[dependencies.ctrlc]
version = "3"
features = ["termination"] # [tag:ctrlc_term]
