[package]
name = "toast"
version = "0.48.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "Containerize your development and continuous integration environments."
license = "MIT"
documentation = "https://github.com/stepchowfun/toast"
homepage = "https://github.com/stepchowfun/toast"
repository = "https://github.com/stepchowfun/toast"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
clap = { version = "4.6.2", features = ["derive", "wrap_help"] }
colored = "3.1.1"
crossbeam = "0.8.4"
digest-io = "0.1.0"
dirs = "6.0.0"
env_logger = "0.11.11"
hex = "0.4.3"
indicatif = "0.18.6"
log = "0.4.33"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
typed-path = "0.12.3"
walkdir = "2.5.0"

[dependencies.ctrlc]
version = "3.5.2"
features = ["termination"] # [tag:ctrlc_term]
